# project1_Shevelev_Igor_M25-555

./: .gitignore  Makefile  README.md  pyproject.toml
